--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>DIGITAL PARTICLES</h1>
         </header>
         <main>
-            <p>unique web development and graphic design</p>
+            <h2>unique web development and graphic design</h2>
             <a href="#" class="btn">continue</a>
         </main>
         <footer>
