--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div id="particles-js"></div>
     <div class="container">
         <header>
-            <h1>DIGITAL PARTICLES</h1>
+            <h1>PENROSE PARTICLES</h1>
         </header>
         <main>
-            <h2>unique web development and graphic design</h2>
+            <h2>creative graphic design</h2>
             <a href="#" class="btn">continue</a>
         </main>
         <footer>
-            <p class="all-rights-reserved">&copy; 2024 digital particles - all rights reserved.</p>
+            <p class="all-rights-reserved">&copy; 2022 penrose particles - all rights reserved.</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
