--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>PENROSE PARTICLES</h1>
         </header>
         <main>
-            <h2>creative graphic design</h2>
+            <h2>creative art and design</h2>
             <a href="#" class="btn">continue</a>
         </main>
         <footer>
