--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <h2>creative art and design</h2>
-            <a href="#" class="btn">continue</a>
+            <a href="index1.html" class="btn">continue</a>
         </main>
         <footer>
             <p class="all-rights-reserved">&copy; 2022 penrose particles - all rights reserved.</p>
