--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         </header>
         <main>
             <h2>creative art and design</h2>
-            <a href="index1.html" class="btn">
-                <button>contact us</button>
+            <a href="index1.html" class="btn">contact us
             </a>
         </main>
         <footer>
