--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
     <div id="particles-js"></div>
     <div class="container">
         <header>
-            <h1>PENROSE PARTICLES</h1>
+
+            <h1 class="wave-title">
+                <span style="--i:0">P</span>
+                <span style="--i:1">E</span>
+                <span style="--i:2">N</span>
+                <span style="--i:3">R</span>
+                <span style="--i:4">O</span>
+                <span style="--i:5">S</span>
+                <span style="--i:6">E</span>
+                <span style="--i:7"> </span>
+                <span style="--i:8">P</span>
+                <span style="--i:9">A</span>
+                <span style="--i:10">R</span>
+                <span style="--i:11">T</span>
+                <span style="--i:12">I</span>
+                <span style="--i:13">C</span>
+                <span style="--i:14">L</span>
+                <span style="--i:15">E</span>
+                <span style="--i:16">S</span>
+            </h1>
+
+
         </header>
         <main>
             <h2>creative art and design</h2>
