--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,17 @@
 
 <body>
     <header>
-        <h1>ART & DESIGN</h1>
+        <h1>Design with visual effects</h1>
 
     </header>
 
     <section class="fade-carousel">
         <div class="carousel-track">
-            <img src="images/art1.jpg" alt="Artwork 1" class="active">
-            <img src="images/art2.jpg" alt="Artwork 2">
-            <img src="images/art3.jpg" alt="Artwork 3">
-            <img src="images/art4.jpg" alt="Artwork 4">
-            <img src="images/art5.jpg" alt="Artwork 5">
+            <img src="images/art1.jpg" alt="pic 1" class="active">
+            <img src="images/art2.jpg" alt="pic 2">
+            <img src="images/art3.jpg" alt="pic 3">
+            <img src="images/art4.jpg" alt="pic 4">
+            <img src="images/art5.jpg" alt="pic 5">
         </div>
     </section>
 
