--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         </header>
         <main>
-            <h2>creative art and design</h2>
+            <h2>dynamic visuals</h2>
             <a href="portfolio.html" class="btn">enter</a>
         </main>
         <footer>
